err/minibooks.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/minibooks'...
Listing './lib/python3.5/site-packages/minibooks/call_log'...
Compiling './lib/python3.5/site-packages/minibooks/call_log/models.py'...
***   File "./lib/python3.5/site-packages/minibooks/call_log/models.py", line 22
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/minibooks/ledger'...
Compiling './lib/python3.5/site-packages/minibooks/ledger/communication.py'...
***   File "./lib/python3.5/site-packages/minibooks/ledger/communication.py", line 59
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/minibooks/ledger/management'...
Listing './lib/python3.5/site-packages/minibooks/ledger/management/commands'...
Compiling './lib/python3.5/site-packages/minibooks/ledger/models.py'...
***   File "./lib/python3.5/site-packages/minibooks/ledger/models.py", line 490
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/minibooks/ledger/templatetags'...
Compiling './lib/python3.5/site-packages/minibooks/ledger/views.py'...
***   File "./lib/python3.5/site-packages/minibooks/ledger/views.py", line 762
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/minibooks/media'...
Listing './lib/python3.5/site-packages/minibooks/media/css'...
Listing './lib/python3.5/site-packages/minibooks/media/css/jquery-ui'...
Listing './lib/python3.5/site-packages/minibooks/media/css/jquery-ui/smoothness'...
Listing './lib/python3.5/site-packages/minibooks/media/css/jquery-ui/smoothness/images'...
Listing './lib/python3.5/site-packages/minibooks/media/images'...
Listing './lib/python3.5/site-packages/minibooks/media/images/calendar'...
Listing './lib/python3.5/site-packages/minibooks/media/images/icons'...
Listing './lib/python3.5/site-packages/minibooks/media/js'...
Listing './lib/python3.5/site-packages/minibooks/media/js/caktus'...
Listing './lib/python3.5/site-packages/minibooks/media/js/caktus/Autocompleter'...
Listing './lib/python3.5/site-packages/minibooks/media/pendulum'...
Listing './lib/python3.5/site-packages/minibooks/media/pendulum/css'...
Listing './lib/python3.5/site-packages/minibooks/media/pendulum/img'...
Listing './lib/python3.5/site-packages/minibooks/media/pendulum/js'...
Listing './lib/python3.5/site-packages/minibooks/media/style'...
Listing './lib/python3.5/site-packages/minibooks/media/style/caktus'...
Listing './lib/python3.5/site-packages/minibooks/media/style/caktus/Autocompleter'...
Listing './lib/python3.5/site-packages/minibooks/media/style/caktus/moodate'...
Listing './lib/python3.5/site-packages/minibooks/media/style/yahoo'...
Listing './lib/python3.5/site-packages/minibooks/templates'...
Listing './lib/python3.5/site-packages/minibooks/templates/books'...
Listing './lib/python3.5/site-packages/minibooks/templates/books/ledger'...
Listing './lib/python3.5/site-packages/minibooks/templates/books/ledger/account'...
Listing './lib/python3.5/site-packages/minibooks/templates/books/ledger/exchange'...
Listing './lib/python3.5/site-packages/minibooks/templates/books/ledger/exchange/email'...
Listing './lib/python3.5/site-packages/minibooks/templates/books/ledger/reports'...
Listing './lib/python3.5/site-packages/minibooks/templates/books/report'...
Listing './lib/python3.5/site-packages/minibooks/templates/call_log'...
Listing './lib/python3.5/site-packages/minibooks/templates/crm'...
Listing './lib/python3.5/site-packages/minibooks/templates/crm/business'...
Listing './lib/python3.5/site-packages/minibooks/templates/timepiece'...
Listing './lib/python3.5/site-packages/minibooks/templates/timepiece/project'...
Listing './lib/python3.5/site-packages/minibooks/templates/timepiece/time-sheet'...
Listing './lib/python3.5/site-packages/minibooks/trac_tickets'...
Compiling './lib/python3.5/site-packages/minibooks/trac_tickets/caktus_trac.py'...
***   File "./lib/python3.5/site-packages/minibooks/trac_tickets/caktus_trac.py", line 8
    print sql
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/minibooks/trac_tickets/models.py'...
***   File "./lib/python3.5/site-packages/minibooks/trac_tickets/models.py", line 24
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/minibooks-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
